[JAVA-41880] Moved article "Intro to the Java SecurityManager" from core-java-security to core-java-security-5